add lua templates

--- a/WallPaperBuilder/WallPaperBuilder.vcxproj
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LuaTemplates.h" />
     <ClInclude Include="WallPaper.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
