--- a/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="WallPaper.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="LuaTemplates.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
