--- a/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="WallPaper.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TrayIcon.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.hpp">
@@ -33,6 +36,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="LuaTemplates.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="TrayIcon.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
