--- a/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="TrayIcon.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="LuaState.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="meta.lua" />
