step to OOP in lua

--- a/WallPaperBuilder/WallPaperBuilder.vcxproj
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="LuaState.hpp" />
     <ClInclude Include="LuaTemplates.hpp" />
+    <ClInclude Include="Tests.hpp" />
     <ClInclude Include="TrayIcon.h" />
     <ClInclude Include="Utility.hpp" />
     <ClInclude Include="WallPaper.hpp" />
