--- a/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
+++ b/WallPaperBuilder/WallPaperBuilder.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Utility.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Tests.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="meta.lua" />
